we_chatbot/backend.log
  File "/home/zjk/a/GW/we_chatbot/api/main.py", line 378
    return FileResponse(
    ^^^^^^
SyntaxError: expected 'except' or 'finally' block
